--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <h1>Typing Study — Minimal Prototype</h1>
-  <p class="muted">One page, one sentence. We’ll expand after we verify the flow.</p>
+  <p class="muted">One page, one sentence. We’ll expand after verifying the full flow.</p>
 
   <!-- Section 1: Consent + Start -->
   <section id="s-consent" class="card">
@@ -36,6 +36,14 @@
       <button id="btnStart" disabled>Start</button>
     </div>
     <p id="startInfo" class="mono"></p>
+  </section>
+
+  <!-- Section 1.5: Switch Device -->
+  <section id="s-switch" class="card hidden">
+    <h2>Start on your other device</h2>
+    <p id="switchMsg"></p>
+    <p>Open this link on your other device to continue:</p>
+    <p class="mono" id="continueLink"></p>
   </section>
 
   <!-- Section 2: Trial -->
@@ -60,34 +68,37 @@
   </section>
 
   <script>
-    // 👉 CONFIG: put YOUR endpoint + secret here (this will be visible client-side; OK for this class project)
+    // 👉 CONFIG
     const ENDPOINT = "https://script.google.com/macros/s/AKfycbz5dTthOWO4crOgte-hUWlIDR4bM2LgLshVOdV-BacKt606Ob8B5dKLxLHB2BalhYG0sg/exec";
     const SECRET   = "h33iy43brfu3hf93fhb3fi3ivh3v";
 
-    // One demo sentence (we’ll load your full set later)
-    const TEST_SENTENCE = "Machine learning can analyze how fast people type under different conditions.";
+    // Environment + helpers
+    const IS_MOBILE = /Mobi|Android/i.test(navigator.userAgent);
+    const DEVICE_NOW = IS_MOBILE ? "phone" : "laptop";
+    const DEVICE_OTHER = IS_MOBILE ? "laptop" : "phone";
+    const makeContinueUrl = (pid) => location.origin + location.pathname + "?pid=" + encodeURIComponent(pid);
 
     // DOM
     const sConsent = document.getElementById("s-consent");
+    const sSwitch  = document.getElementById("s-switch");
     const sTrial   = document.getElementById("s-trial");
     const sDone    = document.getElementById("s-done");
     const agree    = document.getElementById("agree");
     const btnStart = document.getElementById("btnStart");
     const ageGroup = document.getElementById("ageGroup");
+    const startInfo= document.getElementById("startInfo");
+    const switchMsg= document.getElementById("switchMsg");
+    const continueLink = document.getElementById("continueLink");
     const sentence = document.getElementById("sentence");
     const input    = document.getElementById("input");
     const btnSubmit= document.getElementById("btnSubmit");
     const timerEl  = document.getElementById("timer");
     const pidOut   = document.getElementById("pidOut");
-    const startInfo= document.getElementById("startInfo");
 
     // State
     let pid = null;
-    let t0 = 0;
+    let t0 = 0, lastT = 0, backspaces = 0, paused500 = 0;
     let keystrokes = [];
-    let backspaces = 0;
-    let paused500 = 0;
-    let lastT = 0;
 
     // Helpers
     const uuid = () => "TS-" + Math.random().toString(36).slice(2) + Date.now().toString(36);
@@ -95,9 +106,14 @@
     const hide = (el) => el.classList.add("hidden");
     const ms = () => performance.now();
 
+    const TEST_SENTENCE = "Machine learning can analyze how fast people type under different conditions.";
+
     // Enable Start when consent + age chosen
-    agree.addEventListener("change", () => { btnStart.disabled = !(agree.checked && ageGroup.value); });
-    ageGroup.addEventListener("change", () => { btnStart.disabled = !(agree.checked && ageGroup.value); });
+    function updateStartBtn() {
+      btnStart.disabled = !(agree.checked && ageGroup.value);
+    }
+    agree.addEventListener("change", updateStartBtn);
+    ageGroup.addEventListener("change", updateStartBtn);
 
     btnStart.addEventListener("click", async () => {
       // PID from URL (?pid=...) or create new
@@ -105,25 +121,42 @@
       pid = pidFromUrl || localStorage.getItem("ts_pid") || uuid();
       localStorage.setItem("ts_pid", pid);
 
+      // Randomize device order relative to current device
+      const coin = Math.random() < 0.5;
+      const deviceOrder = coin ? (DEVICE_NOW + "→" + DEVICE_OTHER) : (DEVICE_OTHER + "→" + DEVICE_NOW);
+      localStorage.setItem("ts_device_order", deviceOrder);
+
       // Send participant_start
       try {
         await fetch(ENDPOINT, {
           method: "POST",
-          headers: { "Content-Type": "text/plain" }, // CORS-simple
+          headers: { "Content-Type": "text/plain" },
           body: JSON.stringify({
             secret: SECRET,
             type: "participant_start",
             pid,
             age_group: ageGroup.value,
-            device_order: "Laptop→Phone", // placeholder; we’ll randomize later
+            device_order: deviceOrder,
             consent_version: "v1",
             start_iso: new Date().toISOString()
           })
-        }).then(r => r.json());
+        });
       } catch(e) { console.warn("participant_start failed", e); }
 
-      startInfo.textContent = `PID: ${pid}`;
-      // Move to trial
+      startInfo.textContent = `PID: ${pid} • Assigned order: ${deviceOrder}`;
+
+      // If order starts with other device, show switch message
+      const mustSwitch = deviceOrder.startsWith(DEVICE_OTHER);
+      if (mustSwitch) {
+        hide(sConsent); show(sSwitch);
+        const url = makeContinueUrl(pid);
+        switchMsg.textContent = `Your assigned order is ${deviceOrder}. Please start on your ${DEVICE_OTHER}.`;
+        continueLink.textContent = url;
+        continueLink.style.userSelect = "all";
+        return;
+      }
+
+      // Otherwise continue to trial
       hide(sConsent); show(sTrial);
       setupTrial();
     });
@@ -142,31 +175,21 @@
       const tick = () => { timerEl.textContent = `${Math.round(ms() - t0)} ms`; if(!sTrial.classList.contains("hidden")) requestAnimationFrame(tick); };
       requestAnimationFrame(tick);
 
-      // Keystroke capture (simple)
+      // Capture keys
       input.addEventListener("keydown", onKeydown);
       input.addEventListener("input", onInput);
       input.addEventListener("paste", e => e.preventDefault());
-      input.addEventListener("blur", ()=>{}); // placeholder for focus-blur count
+      input.addEventListener("blur", ()=>{});
 
-      // Enable submit when text matches exactly
-      input.addEventListener("input", () => {
-        btnSubmit.disabled = (input.value !== TEST_SENTENCE);
-      });
-
-      // Submit by Enter too
-      input.addEventListener("keydown", (e) => {
-        if (e.key === "Enter") {
-          e.preventDefault();
-          if (!btnSubmit.disabled) btnSubmit.click();
-        }
-      });
-
+      // Enable submit when correct
+      input.addEventListener("input", () => { btnSubmit.disabled = (input.value !== TEST_SENTENCE); });
+      input.addEventListener("keydown", e => { if(e.key === "Enter"){ e.preventDefault(); if(!btnSubmit.disabled) btnSubmit.click(); } });
       btnSubmit.addEventListener("click", submitTrial, { once: true });
     }
 
     function onKeydown(e) {
       const t = ms();
-      if (t - lastT >= 500) paused500++;  // simple pause >= 500ms
+      if (t - lastT >= 500) paused500++;
       lastT = t;
       if (e.key === "Backspace") backspaces++;
       keystrokes.push({ t_ms: Math.round(t - t0), type: "keydown", key: e.key });
@@ -182,22 +205,18 @@
     async function submitTrial() {
       const end = ms();
       const total = Math.round(end - t0);
-
-      // Compute crude interkey stats from input events (prototype)
       const deltas = [];
-      for (let i = 1; i < keystrokes.length; i++) {
-        deltas.push(keystrokes[i].t_ms - keystrokes[i-1].t_ms);
-      }
+      for (let i = 1; i < keystrokes.length; i++) deltas.push(keystrokes[i].t_ms - keystrokes[i-1].t_ms);
       const meanInter = deltas.length ? Math.round(deltas.reduce((a,b)=>a+b,0)/deltas.length) : 0;
       const p95Inter = deltas.length ? Math.round(deltas.sort((a,b)=>a-b)[Math.floor(0.95*(deltas.length-1))]) : 0;
 
-      // POST trial_summary (text/plain to avoid preflight)
+      // trial_summary
       const payload = {
         secret: SECRET,
         type: "trial_summary",
         pid,
         trial_id: "T1",
-        device: /Mobi|Android/i.test(navigator.userAgent) ? "phone" : "laptop",
+        device: DEVICE_NOW,
         sentence_id: "S1",
         order_in_block: 1,
         start_ms: 0,
@@ -224,21 +243,30 @@
           method: "POST",
           headers: { "Content-Type": "text/plain" },
           body: JSON.stringify(payload)
-        }).then(r => r.json());
+        }).then(r=>r.json());
         ok = !!res?.ok;
-      } catch(e) { console.error(e); }
+      } catch(e){ console.error(e); }
 
-      // End participant
+      // keystrokes_batch
+      try {
+        await fetch(ENDPOINT, {
+          method: "POST",
+          headers: { "Content-Type": "text/plain" },
+          body: JSON.stringify({ secret: SECRET, type: "keystrokes_batch", pid, trial_id: "T1", events: keystrokes })
+        });
+      } catch(e){ console.warn("keystrokes_batch failed", e); }
+
+      // participant_end
       try {
         await fetch(ENDPOINT, {
           method: "POST",
           headers: { "Content-Type": "text/plain" },
           body: JSON.stringify({ secret: SECRET, type: "participant_end", pid, end_iso: new Date().toISOString() })
         });
-      } catch(e) {}
+      } catch(e){}
 
       hide(sTrial); show(sDone);
-      pidOut.textContent = pid + (ok ? "" : " (send failed — check Console)");
+      pidOut.textContent = pid + (ok ? "" : " (send failed)");
     }
   </script>
 </body>
